--- a/wx-app-service/src/main/resources/application-dev.properties
+++ b/wx-app-service/src/main/resources/application-dev.properties
@@ -1,8 +1,14 @@
+##指向mapper的xml文件位置
+mybatis.mapper-locations=mapper.**.*Mapper.xml
+#mybatis.type-aliases-package=cn.ucaner.wx.app.service.*.dao
+
+#pagehelper配置
 pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
 
+#mysql datasource 配置
 spring.datasource.druid.url=jdbc:mysql://47.106.125.14:3306/wxapps?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&verifyServerCertificate=false&useSSL=false
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.druid.username=root
