--- a/wx-app-service/src/main/resources/application-prod.properties
+++ b/wx-app-service/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 ##指向mapper的xml文件位置
-mybatis.mapper-locations=cn.ucaner.wx.app.service.mapper.**.*Mapper.xml
+mybatis.mapper-locations=mapper.**.*Mapper.xml
 mybatis.type-aliases-package=cn.ucaner.wx.app.service.*.dao
 
 pagehelper.helperDialect=mysql
