--- a/wx-app-data/src/main/resources/application.yml
+++ b/wx-app-data/src/main/resources/application.yml
@@ -27,6 +27,12 @@ spring:
       #key的解码方式
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       #value的解码方式
-      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.Str ingDeserializer
       #在/usr/local/etc/kafka/consumer.properties中有配置
       group-id: test-consumer-group
+#######################elastic search############################################################
+#  elasticsearch:
+#    host: 172.16.3.100
+#    port: 9300
+#    clusterName: hbi-elasticsearch
+#################################################################################################
