--- a/wx-app-data/src/main/resources/application.properties
+++ b/wx-app-data/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.elasticsearch.host=127.0.0.1
+#java端的端口为9300 http为9200
 spring.elasticsearch.port=9300
 elasticsearch.cluster.name=hbi-elasticsearch
