--- a/wx-app-core/pom.xml
+++ b/wx-app-core/pom.xml
@@ -64,7 +64,7 @@
 		<dependency>
 		    <groupId>com.alibaba</groupId>
 		    <artifactId>fastjson</artifactId>
-		    <version>${fastjson.version}</version>
+            <version>1.2.56</version>
 		</dependency>
 
         <dependency>
@@ -83,11 +83,6 @@
             <artifactId>qcloudsms</artifactId>
             <version>1.0.5</version>
         </dependency>
-        
-      <!--   <dependency>
-            <groupId>com.github.binarywang</groupId>
-            <artifactId>weixin-java-miniapp</artifactId>
-        </dependency> -->
         
         <!-- configuration-processor 配置动态提示 -->
         <dependency>
