feat:wechat-bot

--- a/pom.xml
+++ b/pom.xml
@@ -155,5 +155,6 @@
 		<module>wx-app-service</module>
 		<module>wx-app-web-boss</module>
         <module>wx-app-data</module>
+        <module>wx-chat-bot</module>
     </modules>
 </project>
